# EuchreMusical

./: README.md
actualfactualmuse/euchrethemusical/euchrethemusical/: checkcards.cpp  euchrethemusical.cpp  gamerounds.cpp  play.cpp
biddingmusicL/euchrethemusical/euchrethemusical/: checkcards.h  gamerounds.cpp  play.h
euchrethemusical/: CMakeLists.txt  checkcards.cpp  play.cpp  play.h
euchrethemusical/euchrethemusical/: deck.h  gamerounds.h  play.h
fixedcomments/euchrethemusical/euchrethemusical/: euchrethemusical.cpp  play.cpp
moremusical/euchrethemusical/euchrethemusical/: deck.cpp  deck.h  gamerounds.cpp  play.cpp  play.h
musicalbut with8/euchrethemusical/: CMakeLists.txt
musicalbut with8/euchrethemusical/euchrethemusical/: euchrethemusical.h  gamerounds.cpp
